# FullStackOne

./: .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  build.ts  d.ts  fmt.sh  index.ts  mem-test.js  package-lock.json  package.json  runner.js  test.ts  tsconfig.json  version.js
Demo/webview/: counter.jsx
bindings/ts/: client.ts  index.ts  test.ts
connect/go/: client.go  go.mod  main.go  server.go
connect/ts/: client.ts  index.ts  server.ts
core/: config.go  directories.go  go.mod  go.sum  main.go
core/src/: esbuild.go
core/wasm/: main.go
editor/: code-editor.ts  constants.ts  deeplink.ts  demo.ts  index.html  index.scss  index.ts  init.ts  ipc.ts  new-ui.html  new-ui.scss  new-ui.ts  rpc.ts  stack-navigation.ts
editor/api/: index.ts
editor/commands/: index.ts  npm.ts
editor/components/: badge.ts  button.ts  dialog.scss  dialog.ts  element.ts  error-message.ts  loader.scss  loader.ts  message.scss  message.ts  popover.scss  popover.ts  refresheable.ts  snackbar.scss  snackbar.ts  top-bar.scss  top-bar.ts  (+1 more)
fullstacked_modules/: core_open.ts  fullstacked.d.ts
lib/: base64.ts  core_fetch.ts  fullstacked.d.ts  platform.ts
platform/linux/: .gitignore  CMakeLists.txt  Makefile  app.cpp  app.h  build-gtk.sh  build.sh  control  control-gtk  control-qt  fix.sh  gui.h  instance.cpp  instance.h  main.cpp  pkg.sh  prebuild.sh  publish.js  utils.cpp  utils.h
platform/linux/gtk/: gtk.cpp  gtk.h
platform/linux/qt/: qt.cpp  qt.h
platform/linux/src/: app.cpp  app.h  base64.cpp  gui.h  instance.cpp  instance.h  main.cpp  utils.cpp  utils.h
platform/linux/src/gtk/: gtk.cpp  gtk.h
platform/linux/src/qt/: qt.cpp  qt.h
platform/linux/webkitgtk/: webkitgtk.cpp  webkitgtk.h
src/: Uint8Array.ts  android.ts  api.ts  fullstacked.ts  index.html  index.ts  ipc.ts  node-bridge.ts  platforms.ts  script.ts  serialization.ts  style.scss  webview.ts
test/: basic.ts  commit-auto-update.ts  core.ts  deeplink-git.ts  index.ts  ios.ts  p2p.ts  types.ts  utils.ts
(+520 files in other folders)
